--- a/src/TomsToolbox.Avalonia/TomsToolbox.Avalonia.csproj
+++ b/src/TomsToolbox.Avalonia/TomsToolbox.Avalonia.csproj
@@ -15,6 +15,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\TomsToolbox.Wpf\DispatcherThrottle.cs" Link="DispatcherThrottle.cs" />
+    <Compile Include="..\TomsToolbox.Wpf\ObservableObject.cs" Link="ObservableObject.cs" />
+    <Compile Include="..\TomsToolbox.Wpf\PropertyDependencyAttribute.cs" Link="PropertyDependencyAttribute.cs" />
+    <Compile Include="..\TomsToolbox.Wpf\RelayedEventAttribute.cs" Link="RelayedEventAttribute.cs" />
+    <Compile Include="..\TomsToolbox.Wpf\Throttle.cs" Link="Throttle.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TomsToolbox.Essentials\TomsToolbox.Essentials.csproj" />
   </ItemGroup>
 
